--- a/src/main/webapp/jsp/book.html
+++ b/src/main/webapp/jsp/book.html
@@ -1,9 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=utf-8"
-	pageEncoding="utf-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-<%@ taglib uri="http://java.sun.com/jstl/fmt" prefix="fmt"%>
-<%@ taglib uri="http://java.sun.com/jstl/sql" prefix="sql"%>
-<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head lang="en">
@@ -11,17 +5,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>书籍管理</title>
-<link rel="stylesheet" href="css/common.css" />
-<link rel="stylesheet" href="css/book.css" />
-<link rel="stylesheet" href="css/all.css" />
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<script src="vendor/jquery-1.11.3.min.js"></script>
-<script src="vendor/bootstrap.min.js"></script>
+<link rel="stylesheet" href="../resource/css/common.css" />
+<link rel="stylesheet" href="../resource/css/book.css" />
+<link rel="stylesheet" href="../resource/css/all.css" />
+<link rel="stylesheet" href="../resource/css/bootstrap.min.css" />
+<script src="../resource/vendor/jquery-1.11.3.min.js"></script>
+<script src="../resource/vendor/bootstrap.min.js"></script>
 </head>
 <body>
 <div id="navigation_chen">
-<a href="${pageContext.request.contextPath}/">退出登录</a>&nbsp&nbsp&nbsp&nbsp
-<a href="${pageContext.request.contextPath}/go_navigation">管理导航</a>
+<a href="./">退出登录</a>&nbsp&nbsp&nbsp&nbsp
+<a href="indexAdmin.html">管理导航</a>
 </div>
 	<div class="container">
 		<h2>
@@ -89,14 +83,9 @@
 		<div class="paginationdiv">
 			<ul class="pagination">
 				<li><a href="${pageContext.request.contextPath}/book_list">首页</a></li>
-				<li><a
-					href="${pageContext.request.contextPath}/book_list?pageNo=${pageNo-1}"
-					<c:if test="${pageNo==1}">hidden</c:if>>上一页</a></li>
-				<li><a
-					href="${pageContext.request.contextPath}/book_list?pageNo=${pageNo+1}"
-					<c:if test="${pageNo==pageSum}">hidden</c:if>>下一页</a></li>
-				<li><a
-					href="${pageContext.request.contextPath}/book_list?pageNo=${pageSum}">尾页</a></li>
+				<li><a href="./book_list">上一页</a></li>
+				<li><a href="">下一页</a></li>
+				<li><a href="${pageContext.request.contextPath}/book_list?pageNo=${pageSum}">尾页</a></li>
 			</ul>
 		</div>
 	</div>
