--- a/src/main/webapp/jsp/indexAdmin.html
+++ b/src/main/webapp/jsp/indexAdmin.html
@@ -1,11 +1,9 @@
-<%@ page language="java" contentType="text/html; charset=utf-8"
-	pageEncoding="utf-8"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>书店管理导航</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./resource/css/bootstrap.min.css" rel="stylesheet" />
     <style type="text/css">
         body{
             margin: 0;
@@ -52,17 +50,19 @@
             font-size: 40px;
         }
     </style>
+    <script type="text/javascript" src="../js/common.js"></script>
+    <script type="text/javascript" src="../js/userMangage.js"></script>
 </head>
 <body>
-<div id="loginout"><a href="${pageContext.request.contextPath}/">退出登录</a></div>
+<div id="loginout"><a href="./">退出登录</a></div>
 <div id="title">图书管理系统</div>
 <div id="man">
     <h2>管理导航</h2>
     <ul>
-        <li><a href="${pageContext.request.contextPath}/book_list?pageNo=1&pageSize=6">书籍管理</a></li>
-        <li><a href="${pageContext.request.contextPath}/user_list">用户管理</a></li>
-        <li><a href="${pageContext.request.contextPath}/#">订单管理</a></li>
-        <li><a href="${pageContext.request.contextPath}/#">物流管理</a></li>
+        <li><a href="book.html">书籍管理</a></li>
+        <li><a href="userMangage.html">用户管理</a></li>
+        <li><a href="#">订单管理</a></li>
+        <li><a href="#">物流管理</a></li>
 
     </ul>
 </div>
