--- a/src/main/webapp/jsp/indexAdmin.html
+++ b/src/main/webapp/jsp/indexAdmin.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>书店管理导航</title>
-    <link href="./resource/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../resource/css/bootstrap.min.css" rel="stylesheet" />
     <style type="text/css">
         body{
             margin: 0;
@@ -50,8 +50,6 @@
             font-size: 40px;
         }
     </style>
-    <script type="text/javascript" src="../js/common.js"></script>
-    <script type="text/javascript" src="../js/userMangage.js"></script>
 </head>
 <body>
 <div id="loginout"><a href="./">退出登录</a></div>
