--- a/src/main/webapp/jsp/userMangage.html
+++ b/src/main/webapp/jsp/userMangage.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head lang="en">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>用户管理</title>
-<link rel="stylesheet" href="../resource/css/common.css" />
-<link rel="stylesheet" href="../resource/css/all.css" />
-<link href="./resource/css/bootstrap.min.css" rel="stylesheet">
-<script src="./resource/vendor/jquery-1.11.3.min.js"></script>
-<script src="./resource/vendor/bootstrap.min.js"></script>
-<script type="text/javascript"	 src="./js/userMangage.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>用户管理</title>
+	<link rel="stylesheet" href="../resource/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="../resource/css/common.css" />
+	<link rel="stylesheet" href="../resource/css/all.css" />
+	<script type="text/javascript" src="../resource/vendor/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="../resource/vendor/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../js/common.js"></script>
+	<script type="text/javascript"	 src="../js/userMangage.js"></script>
 </head>
 <body>
 	<div id="navigation_chen">
@@ -17,7 +18,7 @@
 	</div>
 	<div class="container">
 		<h2>
-			用户信息管理 <small>${user.username} 管理员，欢迎您！</small>
+			用户信息管理 <small> 管理员名称，欢迎您！</small>
 		</h2>
 		<a class="btn btn-info btn-sm"
 			href="#"> <span
@@ -40,12 +41,12 @@
 			<tbody>
 					<tr>
 						<td>${user.userid}</td>
-						<td><a href="./user_edit?userid=${user.userid}">${user.username}</a></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+						<td><a href="./user_edit?userid=${user.userid}">111</a></td>
+						<td>11</td>
+						<td>11</td>
+						<td>11</td>
+						<td>11</td>
+						<td>11</td>
 						<td><a href="#" class="btn btn-info btn-sm"><span
 								class="glyphicon glyphicon-pencil"></span>禁用</a></td>
 						<td><a
